# unix-named-pipe

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
ci/docs/: index.html
examples/: client.rs  fixsz_server.rs  server.rs  varsz_client.rs  varsz_server.rs
src/: ext.rs  lib.rs
